--- a/templates/admin_panel/index.ejs
+++ b/templates/admin_panel/index.ejs
@@ -8,7 +8,7 @@ pageURL:'admin_panel/', thumbnailImgURL: 'vickywang_web.png'
 <!--Head-->
 
 <body class="LASO">
-  <%- include(`${templatePath}/shared/compProgressBar`,{
+  <%- include(`${templatePath}/shared/comp_progressBar`,{
     barColor:`LASO`
   }) %>
 
