--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -12,7 +12,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
 <body>
 
-  <%- include(`${templatePath}/shared/compProgressBar`) %>
+  <%- include(`${templatePath}/shared/comp_progressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
     currentPage: 'PROJECT',
