--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -11,7 +11,7 @@
 <!--Head-->
 
 <body class="GLORIFY">
-  <%- include(`${templatePath}/shared/compProgressBar`,{
+  <%- include(`${templatePath}/shared/comp_progressBar`,{
     barColor:`GLORIFY`
   }) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
