--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -8,7 +8,7 @@
 <!--Head-->
 
 <body>
-  <%- include( `${templatePath}/shared/compProgressBar`) %>
+  <%- include( `${templatePath}/shared/comp_progressBar`) %>
 
   <%- include(`${templatePath}/shared/block_nav_header`, { 
     type:'logoText', 
