--- a/templates/savings_calculator/index.ejs
+++ b/templates/savings_calculator/index.ejs
@@ -8,7 +8,7 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
 <!--Head-->
 
 <body class="LASO">
-  <%- include(`${templatePath}/shared/compProgressBar`,{
+  <%- include(`${templatePath}/shared/comp_progressBar`,{
     barColor:`LASO`
   }) %>
 
@@ -18,10 +18,6 @@ pageURL:'/worksamples/BYP_LH_wsbeebr/LHCost_benefitCalculator/', thumbnailImgURL
   PageUrl:`${websitePath}/`,
   headerBackgroundColor:`colorBgLASO`,
   arrTxtColor:`LASO`,
-  sectionURL1:'/#projects', 
-  sectionURL2:'/#experiments', 
-  sectionURL3:'/#design_system', 
-  sectionURL4:'/#about',
   }) %>
 
 
