--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -10,7 +10,7 @@
 <!--Head-->
 
 <body class="APPOINTA">
-  <%- include(`${templatePath}/shared/compProgressBar`,{
+  <%- include(`${templatePath}/shared/comp_progressBar`,{
     barColor:`APPOINTA`
   }) %>  
   
