--- a/templates/architecture/LACAMA/index.ejs
+++ b/templates/architecture/LACAMA/index.ejs
@@ -7,7 +7,7 @@
 <!--Head-->
 
 <body>
-  <%- include(`${templatePath}/shared/compProgressBar`) %>
+  <%- include(`${templatePath}/shared/comp_progressBar`) %>
 
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
