--- a/templates/architecture/narrow_stripes/index.ejs
+++ b/templates/architecture/narrow_stripes/index.ejs
@@ -10,7 +10,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/compProgressBar`) %>
+  <%- include(`${templatePath}/shared/comp_progressBar`) %>
 
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
