--- a/templates/architecture/recreation_commons/index.ejs
+++ b/templates/architecture/recreation_commons/index.ejs
@@ -10,7 +10,7 @@
 
 
 <body>
-  <%- include(`${templatePath}/shared/compProgressBar`) %>
+  <%- include(`${templatePath}/shared/comp_progressBar`) %>
 
 
 
