--- a/templates/design_system/navigation/index.ejs
+++ b/templates/design_system/navigation/index.ejs
@@ -9,7 +9,7 @@ pageURL:'design_system/navigation/', thumbnailImgURL: 'vickywang_web.png'
 
 
 <body>
-  <%- include(`${templatePath}/shared/compProgressBar`) %>
+  <%- include(`${templatePath}/shared/comp_progressBar`) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
     type:'backText', 
     currentPage: 'PROJECT',
