--- a/templates/seer/index.ejs
+++ b/templates/seer/index.ejs
@@ -11,7 +11,7 @@
 
 
 <body class="SEER">
-  <%- include(`${templatePath}/shared/compProgressBar`,{
+  <%- include(`${templatePath}/shared/comp_progressBar`,{
     barColor:`SEER`
   }) %>
   <%- include(`${templatePath}/shared/block_nav_header`, {
