--- a/templates/shared/block_cardNoPassword.ejs
+++ b/templates/shared/block_cardNoPassword.ejs
@@ -1,3 +1,28 @@
+<% if (typeof cardNoPwDescription === 'undefined') { 
+  cardNoPwDescription = ''; 
+} 
+%>
+<% if (typeof landingCardDescription1 === 'undefined') { 
+  landingCardDescription1 = ''; 
+} 
+%>
+<% if (typeof landingCardDescription2 === 'undefined') { 
+  landingCardDescription2 = ''; 
+} 
+%>
+<% if (typeof landingCardPt1 === 'undefined') { 
+  landingCardPt1 = ''; 
+} 
+if (typeof landingCardPt2 === 'undefined') { 
+  landingCardPt2 = ''; 
+} 
+if (typeof landingCardPt3 === 'undefined') { 
+  landingCardPt3 = ''; 
+} 
+%>
+
+
+
 <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder <%= hoverBorderColor %> paddingNone marginXS">
   <a class="no-hover-effect" href="<%= cardNoPwURL%>">
     <img src="<%= cardNoPwImgURL%>" alt="<%= cardNoPwTitle %>">
@@ -5,6 +30,11 @@
       <h3 class="arrCard"><strong><%= cardNoPwTitle %></strong></h3>
       <h4><%= cardNoPwDescription %>
       </h4>
+      <h4><%= landingCardDescription1 %>
+      </h4>
+      <h4><%= landingCardDescription2 %>
+      </h4>
+
     </div>
   </a>
 </div>
