--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -18,7 +18,7 @@
   <%- include(`${templatePath}/shared/block_banner`, {            bannerTitle:`Optimizing Pet Service Bookings`,
         bannerSubTitle:`Enhancing the Consumer Booking Experience`,
         bannerLogoUrl:`${websitePath}/byp_b2c_booking/logo_BYP.svg`,
-        SlideDeckUrl:`https://www.figma.com/proto/apacUjNvkG8t767EbkrxyG/Grooming---Consumer-facing?page-id=403%3A6906&node-id=403-6907&recovery=true&viewport=1341%2C1627%2C0.04&t=WKx1QQyW1B6dGhjQ-1&scaling=contain&content-scaling=fixed&starting-point-node-id=403%3A6907`,
+        SlideDeckUrl:`https://www.figma.com/proto/g0r9aZkxovW1vD5oJ4jvDZ/Enhancing-the-B2B-Selling-%26-Booking-Experience?page-id=2001%3A38623&node-id=2001-39176&viewport=4032%2C1924%2C0.09&t=sBVSsXxg9STW6os4-1&scaling=contain&content-scaling=fixed&starting-point-node-id=2001%3A39176`,
         bannerBgColor:``, 
         bannerMockupL:`MockupL.png`, 
         bannerMockupM:`MockupM.png`, 
